# AI_incident_investigator

./: CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/analyzers/: citations.py  dependencies.py  deployments.py  log_clustering.py  metrics.py  parsers.py  pattern_rules.py  risk.py  time_utils.py  timeline.py
backend/app/api/: deps.py  routes_analysis.py  routes_evidence.py  routes_health.py  routes_incidents.py  routes_outputs.py
backend/app/core/: config.py  logging.py
backend/app/domain/: enums.py
backend/app/llm/: factory.py  mock_provider.py  openai_provider.py  provider.py
backend/app/models/: database.py  entities.py
backend/app/observability/: metrics.py
backend/app/repositories/: incidents.py
backend/app/schemas/: analysis.py  common.py  evidence.py  incidents.py
backend/app/security/: input_validation.py  redaction.py
backend/app/services/: analysis_service.py  evidence_ingestion.py  export_service.py  sample_loader.py
backend/app/tests/: test_analyzers.py  test_api.py
docs/: architecture.md  data-model.md  extension-guide.md  threat-model.md
docs/decision-log/: 0001-deterministic-before-llm.md  0002-llm-provider-abstraction.md  0004-sqlite-local-mvp.md  (+2 more)
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
scripts/: capture_demo.md  check_repo.py  dev_backend.sh  dev_frontend.sh  seed_demo.py
(+12 files in other folders)
