[project]
name = "ai-incident-investigator-backend"
version = "0.1.0"
description = "Evidence-first SRE incident investigation backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "prometheus-client>=0.20",
  "pydantic-settings>=2.4",
  "python-json-logger>=2.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[tool.ruff]
line-length = 220
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = false
exclude = ["app/tests/"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
